--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,19 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        pg-version: [13, 14, 15, 16]
-
+        pg-version: [13, 14, 15, 16, 17]
     steps:
-      - id: install
-        run: |
-          sudo apt-get remove -u postgresql\*
-          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 7FCC7D46ACCC4CF8
-          sudo sh -c 'echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-          sudo apt-get update
-          sudo apt-get install -y postgresql-server-dev-${{ matrix.pg-version }}
       - id: checkout
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - id: make
-        run: make
+      - uses: ankane/setup-postgres@v1
+        with:
+          postgres-version: ${{ matrix.pg-version }}
+          dev-files: true
+      - run: make
+        env:
+          PG_CFLAGS: -DUSE_ASSERT_CHECKING -Wall -Wextra -Werror -Wno-unused-parameter -Wno-sign-compare
+      - run: |
+          export PG_CONFIG=`which pg_config`
+          sudo --preserve-env=PG_CONFIG make install
