--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,17 @@ jobs:
         env:
           PG_CFLAGS: -DUSE_ASSERT_CHECKING -Wall -Wextra -Werror -Wno-unused-parameter -Wno-sign-compare
       - run: |
-          export PG_CONFIG=`which pg_config`
+          export PG_CONFIG=$(which pg_config)
+          echo "$PG_CONFIG"
           sudo --preserve-env=PG_CONFIG make install
+      - run: |
+          echo "local all all trust" | sudo tee /etc/postgresql/${{ matrix.pg-version }}/main/pg_hba.conf
+          echo "shared_preload_libraries = 'ddl_guard'" | sudo tee -a /etc/postgresql/${{ matrix.pg-version }}/main/postgresql.conf
+          sudo systemctl restart postgresql@${{ matrix.pg-version }}-main
+          sleep 2
+      - if: ${{ failure() }}
+        run: |
+          sudo systemctl status postgresql@${{ matrix.pg-version }}-main
+          sudo journalctl -xeu  postgresql@${{ matrix.pg-version }}-main
+      - id: test
+        run: bin/test
