--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 # Executables
 *.exe
 *.out
+!test/expected/*.out
 *.app
 *.i*86
 *.x86_64
@@ -77,7 +78,8 @@ dkms.conf
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -97,3 +99,4 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+*.diffs
