feat: guard dcl
Data Control Language (DCL) is not logically replicated, so it needs to
be guarded against.

--- a/test/ddl_guard.conf
+++ b/test/ddl_guard.conf
@@ -1,4 +1,5 @@
 shared_preload_libraries = 'ddl_guard'
 ddl_guard.enabled = on
 ddl_guard.ddl_sentinel = on
+ddl_guard.dcl_sentinel = on
 ddl_guard.lo_sentinel = on
